--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.11.0",
     "js-cookie": "^3.0.5",
     "next": "15.4.6",
+    "next-runtime-env": "^3.3.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
