--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@hookform/resolvers": "^5.2.1",
+    "@types/nprogress": "^0.2.3",
     "axios": "^1.11.0",
     "js-cookie": "^3.0.5",
     "next": "15.4.6",
     "next-runtime-env": "^3.3.0",
     "next-themes": "^0.4.6",
+    "nprogress": "^0.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
