--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@types/nprogress": "^0.2.3",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.22",
     "iron-session": "^8.0.4",
     "js-cookie": "^3.0.5",
     "next": "15.4.6",
