--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nprogress": "^0.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.62.0",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
