--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.1.0",
     "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.62.0",
+    "socket.io-client": "^4.8.1",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
