--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.23.22",
     "iron-session": "^8.0.4",
     "js-cookie": "^3.0.5",
+    "ky": "^1.14.0",
     "next": "15.4.6",
     "next-runtime-env": "^3.3.0",
     "next-themes": "^0.4.6",
@@ -25,6 +26,7 @@
     "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.62.0",
     "socket.io-client": "^4.8.1",
+    "tus-js-client": "^4.3.1",
     "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
