--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "next-runtime-env": "^3.3.0",
     "next-themes": "^0.4.6",
     "nprogress": "^0.2.0",
+    "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.62.0",
+    "set-cookie-parser": "^2.7.2",
     "socket.io-client": "^4.8.1",
     "tus-js-client": "^4.3.1",
     "zod": "^4.0.17",
@@ -35,8 +37,10 @@
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/set-cookie-parser": "^2.4.10",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
